# serializer version: 1
# name: test_activities_data
  list([
    Activity(
      id=1,
      name='Providing',
    ),
    Activity(
      id=2,
      name='Consuming',
    ),
  ])
# ---
# name: test_classifications_data
  list([
    Classification(
      id=1,
      name='Forecast',
    ),
    Classification(
      id=2,
      name='Current',
    ),
    Classification(
      id=3,
      name='Backcast',
    ),
  ])
# ---
# name: test_granularities_data
  list([
    Granularity(
      id=3,
      name='10Min',
    ),
    Granularity(
      id=4,
      name='15Min',
    ),
    Granularity(
      id=5,
      name='Hour',
    ),
    Granularity(
      id=6,
      name='Day',
    ),
    Granularity(
      id=7,
      name='Month',
    ),
    Granularity(
      id=8,
      name='Year',
    ),
  ])
# ---
# name: test_granularity_timezones_data
  list([
    GranularityTimezone(
      id=0,
      name='UTC',
    ),
    GranularityTimezone(
      id=1,
      name='Europe/Amsterdam',
    ),
  ])
# ---
# name: test_points_data
  list([
    Point(
      id=0,
      name='Nederland',
      shortname='NL',
    ),
    Point(
      id=1,
      name='Groningen',
      shortname='Gr',
    ),
    Point(
      id=2,
      name='Friesland',
      shortname='Fr',
    ),
    Point(
      id=3,
      name='Drenthe',
      shortname='Dr',
    ),
    Point(
      id=4,
      name='Overijssel',
      shortname='Ov',
    ),
    Point(
      id=5,
      name='Flevoland',
      shortname='FL',
    ),
    Point(
      id=6,
      name='Gelderland',
      shortname='Ge',
    ),
    Point(
      id=7,
      name='Utrecht',
      shortname='Ut',
    ),
    Point(
      id=8,
      name='Noord-Holland',
      shortname='No',
    ),
    Point(
      id=9,
      name='Zuid-Holland',
      shortname='Zu',
    ),
    Point(
      id=10,
      name='Zeeland',
      shortname='Ze',
    ),
    Point(
      id=11,
      name='Noord-Brabant',
      shortname='Nb',
    ),
    Point(
      id=12,
      name='Limburg',
      shortname='Li',
    ),
    Point(
      id=13,
      name='Eilanden',
      shortname='Ei',
    ),
    Point(
      id=28,
      name='Windpark Luchterduinen',
      shortname='WPlu',
    ),
    Point(
      id=29,
      name='Windpark Princes Amalia',
      shortname='WPam',
    ),
    Point(
      id=30,
      name='Windpark Egmond aan Zee',
      shortname='WPoz',
    ),
    Point(
      id=31,
      name='Windpark Gemini',
      shortname='WPGe',
    ),
    Point(
      id=32,
      name='Windpark Borselle',
      shortname='WPbo',
    ),
    Point(
      id=33,
      name='Windpark Borselle I&II',
      shortname='WPb1',
    ),
    Point(
      id=34,
      name='Windpark Borselle III&IV',
      shortname='Wpb3',
    ),
    Point(
      id=35,
      name='Windpark Hollandse Kust Zuid',
      shortname='WPkz',
    ),
    Point(
      id=36,
      name='Windpark Hollandse Kust Noord',
      shortname='WPkn',
    ),
  ])
# ---
# name: test_types_data
  list([
    Type(
      id=1,
      name='Wind',
      shortname='W',
    ),
    Type(
      id=2,
      name='Solar',
      shortname='S',
    ),
    Type(
      id=3,
      name='Biogas',
      shortname='B',
    ),
    Type(
      id=4,
      name='HeatPump',
      shortname='HP',
    ),
    Type(
      id=5,
      name='AirHeatPump',
      shortname='AHP',
    ),
    Type(
      id=6,
      name='HybridHeatPump',
      shortname='HHP',
    ),
    Type(
      id=7,
      name='GroundHeatPump',
      shortname='GHP',
    ),
    Type(
      id=8,
      name='Cofiring',
      shortname='COF',
    ),
    Type(
      id=9,
      name='Geothermal',
      shortname='GEO',
    ),
    Type(
      id=10,
      name='Other',
      shortname='OTHR',
    ),
    Type(
      id=11,
      name='Waste',
      shortname='WST',
    ),
    Type(
      id=12,
      name='BioOil',
      shortname='BOIL',
    ),
    Type(
      id=13,
      name='Biomass',
      shortname='BMSS',
    ),
    Type(
      id=14,
      name='Wood',
      shortname='WOOD',
    ),
    Type(
      id=15,
      name='WoodActiveHeating',
      shortname='WOAH',
    ),
    Type(
      id=16,
      name='WoodComfortHeating',
      shortname='WOCH',
    ),
    Type(
      id=17,
      name='WindOffshore',
      shortname='WIOS',
    ),
    Type(
      id=18,
      name='FossilGasPower',
      shortname='FGP',
    ),
    Type(
      id=19,
      name='FossilHardCoal',
      shortname='FHC',
    ),
    Type(
      id=20,
      name='Nuclear',
      shortname='NCL',
    ),
    Type(
      id=21,
      name='WastePower',
      shortname='WP',
    ),
    Type(
      id=22,
      name='WindOffshoreB',
      shortname='WOSB',
    ),
    Type(
      id=23,
      name='NaturalGas',
      shortname='NG',
    ),
    Type(
      id=24,
      name='Biomethane',
      shortname='BM',
    ),
    Type(
      id=25,
      name='BiomassPower',
      shortname='BMP',
    ),
    Type(
      id=26,
      name='OtherPower',
      shortname='OP',
    ),
    Type(
      id=27,
      name='ElectricityMix',
      shortname='EM',
    ),
    Type(
      id=28,
      name='GasMix',
      shortname='GM',
    ),
    Type(
      id=29,
      name='GasPrivateDistributionCompanies',
      shortname='GPDC',
    ),
    Type(
      id=30,
      name='GasFinalConsumers',
      shortname='GFC',
    ),
    Type(
      id=31,
      name='GasDistribution',
      shortname='GD',
    ),
    Type(
      id=32,
      name='CHPElectricity',
      shortname='CHPE',
    ),
    Type(
      id=33,
      name='WindB',
      shortname='WB',
    ),
    Type(
      id=34,
      name='SolarB',
      shortname='SB',
    ),
    Type(
      id=35,
      name='WKK Total',
      shortname='WKKT',
    ),
    Type(
      id=36,
      name='WKK Distribution',
      shortname='WKKD',
    ),
    Type(
      id=37,
      name='WKK Final Consumers',
      shortname='WKKF',
    ),
    Type(
      id=38,
      name='Gas Feedstock',
      shortname='GFS',
    ),
    Type(
      id=43,
      name='IndustrialConsumersLGas',
      shortname='ICLG',
    ),
    Type(
      id=45,
      name='LocalDistributionCompaniesHGas',
      shortname='LDCH',
    ),
    Type(
      id=46,
      name='LocalDistributionCompaniesLGas',
      shortname='LDCL',
    ),
    Type(
      id=47,
      name='IndustrialConsumersPowerHGas',
      shortname='ICPH',
    ),
    Type(
      id=48,
      name='IndustrialConsumersPowerLGas',
      shortname='ICPL',
    ),
    Type(
      id=49,
      name='IndustrialConsumersHGas',
      shortname='ICH',
    ),
    Type(
      id=50,
      name='SolarThermal',
      shortname='ST',
    ),
    Type(
      id=51,
      name='WindOffshoreC',
      shortname='WOSC',
    ),
    Type(
      id=53,
      name='IndustrialConsumersGasCombination',
      shortname='ICGC',
    ),
    Type(
      id=54,
      name='IndustrialConsumersPowerGasCombination',
      shortname='ICPG',
    ),
    Type(
      id=55,
      name='LocalDistributionCompaniesCombination',
      shortname='LDCC',
    ),
    Type(
      id=56,
      name='AllConsumingGas',
      shortname='AEGC',
    ),
    Type(
      id=57,
      name='ElectricityRenewable',
      shortname='ER',
    ),
    Type(
      id=58,
      name='ElectricityFossile',
      shortname='EF',
    ),
  ])
# ---
# name: test_utilizations_data
  list([
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64428400808,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 28, 23, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 28, 23, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64428563886,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 28, 23, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 28, 23, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64428714054,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 28, 23, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 28, 23, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64428877389,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 28, 23, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 28, 23, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429040827,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 28, 23, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 0, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429188210,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 0, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 0, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429338832,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 0, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 0, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429489557,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 0, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 0, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429627602,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 0, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 0, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429778584,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 0, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 0, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64429929669,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 0, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 1, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430067929,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 1, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 1, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430106526,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 1, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 1, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430246749,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 1, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 1, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430385319,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 1, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 1, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430424266,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 1, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 1, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579816,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 1, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 2, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579817,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 2, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 2, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579818,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 2, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 2, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579819,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 2, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 2, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579820,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 2, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 2, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579821,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 2, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 2, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430579822,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 2, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 3, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430719174,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 3, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 3, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64430871449,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 3, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 3, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431023827,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 3, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 3, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431163495,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 3, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 3, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431316130,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 3, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 3, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431468868,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 3, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 4, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431608751,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 4, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 4, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431761561,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 4, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 4, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64431914474,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 4, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 4, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64432054667,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 4, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 4, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64432207837,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 4, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 4, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64432361110,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 4, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 5, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64432501518,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 5, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 5, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64432654863,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 5, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 5, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64432808311,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 5, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 5, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=9332,
      emission=0,
      emission_factor=0.0,
      id=64432949029,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0004408143868204206,
      valid_from=datetime.datetime(2024, 3, 29, 5, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 5, 40, tzinfo=datetime.timezone.utc),
      volume=1555,
    ),
    Utilization(
      capacity=28313,
      emission=0,
      emission_factor=0.0,
      id=64433102734,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0013374132104218006,
      valid_from=datetime.datetime(2024, 3, 29, 5, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 5, 50, tzinfo=datetime.timezone.utc),
      volume=4720,
    ),
    Utilization(
      capacity=70145,
      emission=0,
      emission_factor=0.0,
      id=64433256542,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0033134096302092075,
      valid_from=datetime.datetime(2024, 3, 29, 5, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 6, 0, tzinfo=datetime.timezone.utc),
      volume=11692,
    ),
    Utilization(
      capacity=145884,
      emission=0,
      emission_factor=0.0,
      id=64433397475,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.006891041528433561,
      valid_from=datetime.datetime(2024, 3, 29, 6, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 6, 10, tzinfo=datetime.timezone.utc),
      volume=24314,
    ),
    Utilization(
      capacity=265049,
      emission=0,
      emission_factor=0.0,
      id=64433551355,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.012519937008619308,
      valid_from=datetime.datetime(2024, 3, 29, 6, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 6, 20, tzinfo=datetime.timezone.utc),
      volume=44174,
    ),
    Utilization(
      capacity=398153,
      emission=0,
      emission_factor=0.0,
      id=64433813437,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.018807223066687584,
      valid_from=datetime.datetime(2024, 3, 29, 6, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 6, 30, tzinfo=datetime.timezone.utc),
      volume=66359,
    ),
    Utilization(
      capacity=559350,
      emission=0,
      emission_factor=0.0,
      id=64434063412,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.026421472430229187,
      valid_from=datetime.datetime(2024, 3, 29, 6, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 6, 40, tzinfo=datetime.timezone.utc),
      volume=93225,
    ),
    Utilization(
      capacity=779242,
      emission=0,
      emission_factor=0.0,
      id=64434469530,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.03680819272994995,
      valid_from=datetime.datetime(2024, 3, 29, 6, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 6, 50, tzinfo=datetime.timezone.utc),
      volume=129874,
    ),
    Utilization(
      capacity=1026089,
      emission=0,
      emission_factor=0.0,
      id=64434805105,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.04846808686852455,
      valid_from=datetime.datetime(2024, 3, 29, 6, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 7, 0, tzinfo=datetime.timezone.utc),
      volume=171014,
    ),
    Utilization(
      capacity=1304015,
      emission=0,
      emission_factor=0.0,
      id=64435263506,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.06159595027565956,
      valid_from=datetime.datetime(2024, 3, 29, 7, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 7, 10, tzinfo=datetime.timezone.utc),
      volume=217336,
    ),
    Utilization(
      capacity=1650513,
      emission=0,
      emission_factor=0.0,
      id=64435784994,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.07796277850866318,
      valid_from=datetime.datetime(2024, 3, 29, 7, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 7, 20, tzinfo=datetime.timezone.utc),
      volume=275087,
    ),
    Utilization(
      capacity=2008770,
      emission=0,
      emission_factor=0.0,
      id=64435883326,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.09488493949174881,
      valid_from=datetime.datetime(2024, 3, 29, 7, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 7, 30, tzinfo=datetime.timezone.utc),
      volume=334793,
    ),
    Utilization(
      capacity=2410111,
      emission=0,
      emission_factor=0.0,
      id=64436025094,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.11384208500385284,
      valid_from=datetime.datetime(2024, 3, 29, 7, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 7, 40, tzinfo=datetime.timezone.utc),
      volume=401687,
    ),
    Utilization(
      capacity=2927435,
      emission=0,
      emission_factor=0.0,
      id=64436179869,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.1382775753736496,
      valid_from=datetime.datetime(2024, 3, 29, 7, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 7, 50, tzinfo=datetime.timezone.utc),
      volume=487905,
    ),
    Utilization(
      capacity=3406672,
      emission=0,
      emission_factor=0.0,
      id=64436334747,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.16091391444206238,
      valid_from=datetime.datetime(2024, 3, 29, 7, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 8, 0, tzinfo=datetime.timezone.utc),
      volume=567780,
    ),
    Utilization(
      capacity=3896816,
      emission=0,
      emission_factor=0.0,
      id=64436476730,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.1840652972459793,
      valid_from=datetime.datetime(2024, 3, 29, 8, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 8, 10, tzinfo=datetime.timezone.utc),
      volume=649470,
    ),
    Utilization(
      capacity=4358443,
      emission=0,
      emission_factor=0.0,
      id=64436631680,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.20586952567100525,
      valid_from=datetime.datetime(2024, 3, 29, 8, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 8, 20, tzinfo=datetime.timezone.utc),
      volume=726407,
    ),
    Utilization(
      capacity=4757737,
      emission=0,
      emission_factor=0.0,
      id=64436786733,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.22472938895225525,
      valid_from=datetime.datetime(2024, 3, 29, 8, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 8, 30, tzinfo=datetime.timezone.utc),
      volume=792957,
    ),
    Utilization(
      capacity=5102703,
      emission=0,
      emission_factor=0.0,
      id=64436929026,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.2410230189561844,
      valid_from=datetime.datetime(2024, 3, 29, 8, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 8, 40, tzinfo=datetime.timezone.utc),
      volume=850450,
    ),
    Utilization(
      capacity=5439082,
      emission=0,
      emission_factor=0.0,
      id=64437084336,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.25691089034080505,
      valid_from=datetime.datetime(2024, 3, 29, 8, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 8, 50, tzinfo=datetime.timezone.utc),
      volume=906511,
    ),
    Utilization(
      capacity=5942869,
      emission=0,
      emission_factor=0.0,
      id=64437239749,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.2807060778141022,
      valid_from=datetime.datetime(2024, 3, 29, 8, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 9, 0, tzinfo=datetime.timezone.utc),
      volume=990477,
    ),
    Utilization(
      capacity=6473562,
      emission=0,
      emission_factor=0.0,
      id=64437382257,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.30577200651168823,
      valid_from=datetime.datetime(2024, 3, 29, 9, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 9, 10, tzinfo=datetime.timezone.utc),
      volume=1078927,
    ),
    Utilization(
      capacity=6954866,
      emission=0,
      emission_factor=0.0,
      id=64437537742,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3285049498081207,
      valid_from=datetime.datetime(2024, 3, 29, 9, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 9, 20, tzinfo=datetime.timezone.utc),
      volume=1159143,
    ),
    Utilization(
      capacity=7275365,
      emission=0,
      emission_factor=0.0,
      id=64437693330,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.34364229440689087,
      valid_from=datetime.datetime(2024, 3, 29, 9, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 9, 30, tzinfo=datetime.timezone.utc),
      volume=1212560,
    ),
    Utilization(
      capacity=7409742,
      emission=0,
      emission_factor=0.0,
      id=64437836148,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3499884307384491,
      valid_from=datetime.datetime(2024, 3, 29, 9, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 9, 40, tzinfo=datetime.timezone.utc),
      volume=1234957,
    ),
    Utilization(
      capacity=7683680,
      emission=0,
      emission_factor=0.0,
      id=64437991993,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3629263937473297,
      valid_from=datetime.datetime(2024, 3, 29, 9, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 9, 50, tzinfo=datetime.timezone.utc),
      volume=1280615,
    ),
    Utilization(
      capacity=8262892,
      emission=0,
      emission_factor=0.0,
      id=64438147941,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3902834951877594,
      valid_from=datetime.datetime(2024, 3, 29, 9, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 10, 0, tzinfo=datetime.timezone.utc),
      volume=1377149,
    ),
    Utilization(
      capacity=8731683,
      emission=0,
      emission_factor=0.0,
      id=64438290974,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.41242483258247375,
      valid_from=datetime.datetime(2024, 3, 29, 10, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 10, 10, tzinfo=datetime.timezone.utc),
      volume=1455281,
    ),
    Utilization(
      capacity=9150420,
      emission=0,
      emission_factor=0.0,
      id=64438446994,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.43220189213752747,
      valid_from=datetime.datetime(2024, 3, 29, 10, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 10, 20, tzinfo=datetime.timezone.utc),
      volume=1525070,
    ),
    Utilization(
      capacity=9416753,
      emission=0,
      emission_factor=0.0,
      id=64438603117,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.44478023052215576,
      valid_from=datetime.datetime(2024, 3, 29, 10, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 10, 30, tzinfo=datetime.timezone.utc),
      volume=1569460,
    ),
    Utilization(
      capacity=9793632,
      emission=0,
      emission_factor=0.0,
      id=64438746460,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4625798761844635,
      valid_from=datetime.datetime(2024, 3, 29, 10, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 10, 40, tzinfo=datetime.timezone.utc),
      volume=1632272,
    ),
    Utilization(
      capacity=10261311,
      emission=0,
      emission_factor=0.0,
      id=64438902840,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.48466822504997253,
      valid_from=datetime.datetime(2024, 3, 29, 10, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 10, 50, tzinfo=datetime.timezone.utc),
      volume=1710218,
    ),
    Utilization(
      capacity=10774580,
      emission=0,
      emission_factor=0.0,
      id=64439059323,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5089097619056702,
      valid_from=datetime.datetime(2024, 3, 29, 10, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 11, 0, tzinfo=datetime.timezone.utc),
      volume=1795763,
    ),
    Utilization(
      capacity=11010591,
      emission=0,
      emission_factor=0.0,
      id=64439202881,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5200555920600891,
      valid_from=datetime.datetime(2024, 3, 29, 11, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 11, 10, tzinfo=datetime.timezone.utc),
      volume=1835099,
    ),
    Utilization(
      capacity=11195649,
      emission=0,
      emission_factor=0.0,
      id=64439359436,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5287948846817017,
      valid_from=datetime.datetime(2024, 3, 29, 11, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 11, 20, tzinfo=datetime.timezone.utc),
      volume=1865942,
    ),
    Utilization(
      capacity=11437056,
      emission=0,
      emission_factor=0.0,
      id=64439516094,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5401954650878906,
      valid_from=datetime.datetime(2024, 3, 29, 11, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 11, 30, tzinfo=datetime.timezone.utc),
      volume=1906176,
    ),
    Utilization(
      capacity=11583963,
      emission=0,
      emission_factor=0.0,
      id=64439659962,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5471326112747192,
      valid_from=datetime.datetime(2024, 3, 29, 11, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 11, 40, tzinfo=datetime.timezone.utc),
      volume=1930659,
    ),
    Utilization(
      capacity=11652356,
      emission=0,
      emission_factor=0.0,
      id=64439816877,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5503612756729126,
      valid_from=datetime.datetime(2024, 3, 29, 11, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 11, 50, tzinfo=datetime.timezone.utc),
      volume=1942058,
    ),
    Utilization(
      capacity=11629416,
      emission=0,
      emission_factor=0.0,
      id=64439973895,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5492761135101318,
      valid_from=datetime.datetime(2024, 3, 29, 11, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 12, 0, tzinfo=datetime.timezone.utc),
      volume=1938235,
    ),
    Utilization(
      capacity=11357233,
      emission=0,
      emission_factor=0.0,
      id=64440117978,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5364189147949219,
      valid_from=datetime.datetime(2024, 3, 29, 12, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 12, 10, tzinfo=datetime.timezone.utc),
      volume=1892872,
    ),
    Utilization(
      capacity=10889726,
      emission=0,
      emission_factor=0.0,
      id=64440275068,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5143364667892456,
      valid_from=datetime.datetime(2024, 3, 29, 12, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 12, 20, tzinfo=datetime.timezone.utc),
      volume=1814952,
    ),
    Utilization(
      capacity=10558076,
      emission=0,
      emission_factor=0.0,
      id=64440432261,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4986707270145416,
      valid_from=datetime.datetime(2024, 3, 29, 12, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 12, 30, tzinfo=datetime.timezone.utc),
      volume=1759681,
    ),
    Utilization(
      capacity=10424271,
      emission=0,
      emission_factor=0.0,
      id=64440576654,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4923495650291443,
      valid_from=datetime.datetime(2024, 3, 29, 12, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 12, 40, tzinfo=datetime.timezone.utc),
      volume=1737378,
    ),
    Utilization(
      capacity=10327375,
      emission=0,
      emission_factor=0.0,
      id=64440734104,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.48777157068252563,
      valid_from=datetime.datetime(2024, 3, 29, 12, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 12, 50, tzinfo=datetime.timezone.utc),
      volume=1721230,
    ),
    Utilization(
      capacity=10330023,
      emission=0,
      emission_factor=0.0,
      id=64440891657,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4878951907157898,
      valid_from=datetime.datetime(2024, 3, 29, 12, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 13, 0, tzinfo=datetime.timezone.utc),
      volume=1721671,
    ),
    Utilization(
      capacity=10064547,
      emission=0,
      emission_factor=0.0,
      id=64441036265,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4753551483154297,
      valid_from=datetime.datetime(2024, 3, 29, 13, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 13, 10, tzinfo=datetime.timezone.utc),
      volume=1677425,
    ),
    Utilization(
      capacity=10382734,
      emission=0,
      emission_factor=0.0,
      id=64441193890,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4903819262981415,
      valid_from=datetime.datetime(2024, 3, 29, 13, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 13, 20, tzinfo=datetime.timezone.utc),
      volume=1730455,
    ),
    Utilization(
      capacity=10633564,
      emission=0,
      emission_factor=0.0,
      id=64441351618,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.5022273063659668,
      valid_from=datetime.datetime(2024, 3, 29, 13, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 13, 30, tzinfo=datetime.timezone.utc),
      volume=1772263,
    ),
    Utilization(
      capacity=10747051,
      emission=0,
      emission_factor=0.0,
      id=64441496536,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.507585883140564,
      valid_from=datetime.datetime(2024, 3, 29, 13, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 13, 40, tzinfo=datetime.timezone.utc),
      volume=1791176,
    ),
    Utilization(
      capacity=10558889,
      emission=0,
      emission_factor=0.0,
      id=64441654521,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4986974596977234,
      valid_from=datetime.datetime(2024, 3, 29, 13, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 13, 50, tzinfo=datetime.timezone.utc),
      volume=1759815,
    ),
    Utilization(
      capacity=10140372,
      emission=0,
      emission_factor=0.0,
      id=64441812609,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.47892946004867554,
      valid_from=datetime.datetime(2024, 3, 29, 13, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 14, 0, tzinfo=datetime.timezone.utc),
      volume=1690064,
    ),
    Utilization(
      capacity=9501513,
      emission=0,
      emission_factor=0.0,
      id=64441957742,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.4487548768520355,
      valid_from=datetime.datetime(2024, 3, 29, 14, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 14, 10, tzinfo=datetime.timezone.utc),
      volume=1583586,
    ),
    Utilization(
      capacity=8937388,
      emission=0,
      emission_factor=0.0,
      id=64442115902,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.42211008071899414,
      valid_from=datetime.datetime(2024, 3, 29, 14, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 14, 20, tzinfo=datetime.timezone.utc),
      volume=1489565,
    ),
    Utilization(
      capacity=8432436,
      emission=0,
      emission_factor=0.0,
      id=64442274165,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3982602059841156,
      valid_from=datetime.datetime(2024, 3, 29, 14, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 14, 30, tzinfo=datetime.timezone.utc),
      volume=1405406,
    ),
    Utilization(
      capacity=7992521,
      emission=0,
      emission_factor=0.0,
      id=64442419608,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3774821162223816,
      valid_from=datetime.datetime(2024, 3, 29, 14, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 14, 40, tzinfo=datetime.timezone.utc),
      volume=1332085,
    ),
    Utilization(
      capacity=7548111,
      emission=0,
      emission_factor=0.0,
      id=64442578128,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3564918339252472,
      valid_from=datetime.datetime(2024, 3, 29, 14, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 14, 50, tzinfo=datetime.timezone.utc),
      volume=1258018,
    ),
    Utilization(
      capacity=7139869,
      emission=0,
      emission_factor=0.0,
      id=64442736751,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.33720991015434265,
      valid_from=datetime.datetime(2024, 3, 29, 14, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 15, 0, tzinfo=datetime.timezone.utc),
      volume=1189979,
    ),
    Utilization(
      capacity=6747545,
      emission=0,
      emission_factor=0.0,
      id=64442882409,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.3186798393726349,
      valid_from=datetime.datetime(2024, 3, 29, 15, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 15, 10, tzinfo=datetime.timezone.utc),
      volume=1124591,
    ),
    Utilization(
      capacity=6326353,
      emission=0,
      emission_factor=0.0,
      id=64443041104,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.2987865209579468,
      valid_from=datetime.datetime(2024, 3, 29, 15, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 15, 20, tzinfo=datetime.timezone.utc),
      volume=1054390,
    ),
    Utilization(
      capacity=6089829,
      emission=0,
      emission_factor=0.0,
      id=64443199902,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.28761494159698486,
      valid_from=datetime.datetime(2024, 3, 29, 15, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 15, 30, tzinfo=datetime.timezone.utc),
      volume=1014973,
    ),
    Utilization(
      capacity=5887524,
      emission=0,
      emission_factor=0.0,
      id=64443345870,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.2780594825744629,
      valid_from=datetime.datetime(2024, 3, 29, 15, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 15, 40, tzinfo=datetime.timezone.utc),
      volume=981253,
    ),
    Utilization(
      capacity=5660023,
      emission=0,
      emission_factor=0.0,
      id=64443504925,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.2673141658306122,
      valid_from=datetime.datetime(2024, 3, 29, 15, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 15, 50, tzinfo=datetime.timezone.utc),
      volume=943337,
    ),
    Utilization(
      capacity=5247024,
      emission=0,
      emission_factor=0.0,
      id=64443664083,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.2478080838918686,
      valid_from=datetime.datetime(2024, 3, 29, 15, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 16, 0, tzinfo=datetime.timezone.utc),
      volume=874504,
    ),
    Utilization(
      capacity=4682774,
      emission=0,
      emission_factor=0.0,
      id=64443810266,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.22115889191627502,
      valid_from=datetime.datetime(2024, 3, 29, 16, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 16, 10, tzinfo=datetime.timezone.utc),
      volume=780463,
    ),
    Utilization(
      capacity=4078678,
      emission=0,
      emission_factor=0.0,
      id=64443969496,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.1926279515028,
      valid_from=datetime.datetime(2024, 3, 29, 16, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 16, 20, tzinfo=datetime.timezone.utc),
      volume=679778,
    ),
    Utilization(
      capacity=3476833,
      emission=0,
      emission_factor=0.0,
      id=64444128829,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.16420355439186096,
      valid_from=datetime.datetime(2024, 3, 29, 16, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 16, 30, tzinfo=datetime.timezone.utc),
      volume=579472,
    ),
    Utilization(
      capacity=2929094,
      emission=0,
      emission_factor=0.0,
      id=64444275322,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.13833457231521606,
      valid_from=datetime.datetime(2024, 3, 29, 16, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 16, 40, tzinfo=datetime.timezone.utc),
      volume=488182,
    ),
    Utilization(
      capacity=2488739,
      emission=0,
      emission_factor=0.0,
      id=64444434912,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.1175372451543808,
      valid_from=datetime.datetime(2024, 3, 29, 16, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 16, 50, tzinfo=datetime.timezone.utc),
      volume=414791,
    ),
    Utilization(
      capacity=2139899,
      emission=0,
      emission_factor=0.0,
      id=64444594605,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.10106205940246582,
      valid_from=datetime.datetime(2024, 3, 29, 16, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 17, 0, tzinfo=datetime.timezone.utc),
      volume=356651,
    ),
    Utilization(
      capacity=1810478,
      emission=0,
      emission_factor=0.0,
      id=64444741313,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.08550407737493515,
      valid_from=datetime.datetime(2024, 3, 29, 17, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 17, 10, tzinfo=datetime.timezone.utc),
      volume=301748,
    ),
    Utilization(
      capacity=1447018,
      emission=0,
      emission_factor=0.0,
      id=64444901078,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.06833863258361816,
      valid_from=datetime.datetime(2024, 3, 29, 17, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 17, 20, tzinfo=datetime.timezone.utc),
      volume=241170,
    ),
    Utilization(
      capacity=1102686,
      emission=0,
      emission_factor=0.0,
      id=64445060946,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.052076634019613266,
      valid_from=datetime.datetime(2024, 3, 29, 17, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 17, 30, tzinfo=datetime.timezone.utc),
      volume=183780,
    ),
    Utilization(
      capacity=775164,
      emission=0,
      emission_factor=0.0,
      id=64445207964,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.03660862520337105,
      valid_from=datetime.datetime(2024, 3, 29, 17, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 17, 40, tzinfo=datetime.timezone.utc),
      volume=129194,
    ),
    Utilization(
      capacity=446036,
      emission=0,
      emission_factor=0.0,
      id=64445368089,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.02106485329568386,
      valid_from=datetime.datetime(2024, 3, 29, 17, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 17, 50, tzinfo=datetime.timezone.utc),
      volume=74340,
    ),
    Utilization(
      capacity=209246,
      emission=0,
      emission_factor=0.0,
      id=64445528317,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.009881990030407906,
      valid_from=datetime.datetime(2024, 3, 29, 17, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 18, 0, tzinfo=datetime.timezone.utc),
      volume=34873,
    ),
    Utilization(
      capacity=54574,
      emission=0,
      emission_factor=0.0,
      id=64445675550,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0025773404631763697,
      valid_from=datetime.datetime(2024, 3, 29, 18, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 18, 10, tzinfo=datetime.timezone.utc),
      volume=9096,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64445835850,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 18, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 18, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64445996253,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 18, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 18, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64446143796,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 18, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 18, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64446304456,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 18, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 18, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64446465219,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 18, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 19, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64446612977,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 19, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 19, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64446773812,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 19, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 19, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64446934750,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 19, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 19, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64447082818,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 19, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 19, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64447244013,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 19, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 19, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64447405311,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 19, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 20, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64447553594,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 20, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 20, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64447714964,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 20, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 20, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64447876437,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 20, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 20, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448025030,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 20, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 20, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448186760,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 20, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 20, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448348593,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 20, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 21, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448497401,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 21, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 21, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448659306,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 21, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 21, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448821314,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 21, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 21, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64448970432,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 21, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 21, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64449132697,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 21, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 21, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64449295065,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 21, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 22, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64449444398,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 22, 0, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 22, 10, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64449606838,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 22, 10, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 22, 20, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64449769381,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 22, 20, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 22, 30, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64449919024,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 22, 30, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 22, 40, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64450081824,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 22, 40, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 22, 50, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
    Utilization(
      capacity=0,
      emission=0,
      emission_factor=0.0,
      id=64450244727,
      last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc),
      percentage=0.0,
      valid_from=datetime.datetime(2024, 3, 29, 22, 50, tzinfo=datetime.timezone.utc),
      valid_to=datetime.datetime(2024, 3, 29, 23, 0, tzinfo=datetime.timezone.utc),
      volume=0,
    ),
  ])
# ---
